デフォ表示が物理ダメになってたので戻し

--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
     <!-- フォーム -->
     <div class="form-container">
         <!-- 魔法ダメ計算フォーム -->
-        <!-- <div id="magic" class="form-column" style="display: block;"> -->
-        <div id="magic" class="form-column" style="display: none;">
+        <div id="magic" class="form-column" style="display: block;">
             <h2>魔法ダメ計算</h2>
 
             <select id="first-dropdown" onchange="updateSecondDropdown()">
@@ -129,8 +128,7 @@
         </div>
 
         <!-- 物理計算フォーム -->
-        <div id="physics" class="form-column" style="display: block;">
-        <!-- <div id="physics" class="form-column" style="display: none;"> -->
+        <div id="physics" class="form-column" style="display: none;">
             <h2>物理ダメ計算</h2>
             <select id="first-dropdown-physical" onchange="updateSecondDropdown_physical()">
                 <option value="剣士">剣士</option>
